--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@ body {
   font-size: 18px;
   line-height: 34px;
   color: #777;
+  background-color: lightblue;
 }
 
 * {
@@ -150,6 +151,7 @@ h3, h2 {
   position: relative;
   float: left;
   width: 274px;
+  height: 100%;
   margin: 20px 0 25px;
   overflow: auto;
 }
@@ -162,6 +164,10 @@ h3, h2 {
   width: 100%;
   border: 0 none;
   opacity: 0.8;
+}
+.work img:hover {
+  cursor: pointer;
+  border: 2px royalblue;
 }
 
 .work h3 {
