--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@ body {
   line-height: 34px;
   color: #777;
   background-color: lightblue;
+  background-image: url './images/concrete_seamless.png';
 }
 
 * {
@@ -152,7 +153,7 @@ h3, h2 {
   float: left;
   width: 274px;
   height: 100%;
-  margin: 20px 0 25px;
+  margin: 20px 0 10px 25px;
   overflow: auto;
 }
 
@@ -196,6 +197,7 @@ h3, h2 {
 
 #contact-form ul {
   margin-bottom: 20px;
+  list-style-type: none;
 }
 
 #contact-form li {
